--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@ body,
 .legend {
 	text-align: left;
 	line-height: 18px;
-	color: #555;
+	color: #ddd;
+	background-color: #2b2b2b;
+	border: 2px white solid;
 }
 .legend i {
 	min-width: 20px;
@@ -55,7 +57,7 @@ body,
 	height: 18px;
 	float: left;
 	margin-right: 8px;
-	opacity: 0.7;
+	opacity: 0.6;
 }
 
 </style>
@@ -72,7 +74,7 @@ var northEast = L.latLng(44.878, -78.231),
 
 var map = L.map('map', {scrollWheelZoom: false, attribution: ''}).setView([38.488, -92.406], 7).setMaxBounds(bounds);
 
- var tiles = L.mapbox.tileLayer('stlpr.hi06d4b5')
+var tiles = L.mapbox.tileLayer('stlpr.hi06d4b5')
     .addTo(map);
     
 var info = L.control();
